--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My School</title>
+    <title>xplore-local</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <!-- bower:css -->
@@ -24,7 +24,7 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
     <div>
-        <div class="mainContainer">
+        <div class="mainContainer" ng-controller="mainController">
             <!-- content comes here -->
             <div ui-view></div>
         </div>
